--- a/package.json
+++ b/package.json
@@ -6,19 +6,22 @@
   "scripts": {
     "dev": "concurrently \"vite --config config/vite.config.js\" \"npx tailwindcss -c config/tailwind.config.js -i src/styles/input.css -o src/styles/output.css --watch\"",
     "build": "tsc -p config/tsconfig.app.json && vite build --config config/vite.config.js",
-    "tailwind": "npx tailwindcss -c config/tailwind.config.js -i src/styles/input.css -o src/styles/output.css --watch",
+    "tailwind": "npx tailwindcss -c config/tailwind.config.js -i src/styles/input.css -o src/styles/output.css",
     "lint": "eslint . --config config/eslint.config.js",
     "preview": "vite preview --config config/vite.config.js"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@tsconfig/recommended": "^1.0.8",
+    "@tsconfig/vite-react": "^3.4.0",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.1",
@@ -29,7 +32,7 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
   }
