--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview --config config/vite.config.js"
   },
   "dependencies": {
+    "framer-motion": "^11.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
